--- a/curo/styles/Settings.module.css
+++ b/curo/styles/Settings.module.css
@@ -18,7 +18,6 @@
     font-style: normal;
     font-weight:600;
     line-height: normal;
-    letter-spacing: 0.3px;
     margin-bottom: 2vh;
     display:block;
 }
@@ -92,6 +91,26 @@
 .vl {
     width: 1px;
     background-color: rgb(161, 161, 161);
-    margin: 2vw;
+    margin-right: 2vw;
+    margin-left: 2vw;
+    margin-top: 0;
     align-self: stretch;
-  }
+}
+
+.profilePicContainer {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    box-shadow: 2px 2px 20px rgba(100, 55, 254, 0.3);
+}
+
+.profilePicContainer img {
+    width: auto;
+    height: 100%;
+    box-shadow: 2px 2px 20px rgba(100, 55, 254, 0.3);
+    object-fit: cover;
+}
